<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Stat Hub</string>
    <string name="website">Website</string>
    <string name="https_bancusoft_com">http://bancusoft.com</string>
    <string name="address">Address</string>
    <string name="clasificatorul_activit_ilor_din_economia_moldovei_caem">CLASIFICATORUL ACTIVITĂŢILOR DIN ECONOMIA MOLDOVEI (CAEM)</string>
    <string name="clasificatorul_activit_ilor_din_economia_moldovei_caem_2">CLASIFICATORUL ACTIVITĂŢILOR DIN ECONOMIA MOLDOVEI (CAEM-2)</string>
    <string name="clasificatorul_formelor_organizatorico_juridice_ale_agen_ilor_economici_din_republica_moldova_c_f_o_j">CLASIFICATORUL FORMELOR ORGANIZATORICO-JURIDICE ALE AGENŢILOR ECONOMICI DIN REPUBLICA MOLDOVA (C.F.O.J.)</string>
    <string name="schema_principal_a_clasificatorului_formelor_de_proprietate">Schema principală a clasificatorului formelor de proprietate</string>
    <string name="clasificatorul_unit_ilor_administrativ_teritoriale_al_republicii_moldova_cuatm">CLASIFICATORUL UNITĂŢILOR ADMINISTRATIV-TERITORIALE AL REPUBLICII MOLDOVA (CUATM)</string>
    <string name="todo_about_us">TODO</string>
    <string name="about_me">About Me</string>
    <string name="vitalie_bancu">Vitalie Bancu</string>
    <string name="software_engineer_n_programmer">Software Engineer\n Programmer</string>
    <string name="mobile_number">Mobile number</string>
    <string name="linkedin">-  LINKEDIN  -</string>
    <string name="http_linkedin">https://www.linkedin.com/in/bancusoft/</string>
    <string name="section1_content">1. The purpose of the Level Stat application is to read and perceive public data about companies.
(Open data is data that can be freely used, reused and redistributed by anyone, freely, without imposing restrictions such as copyright, patents or other control mechanisms.)
</string>
    <string name="section2_content">The data about companies available through the Level Stat application are sourced entirely from the government portals:\n
    - Link 1: [Link 1](https://date.gov.md/ckan/ro/dataset/11736-date-din-registrul-de-stat-al-unitatilor-de-drept-privind-intreprinderile-inregistrate-in-repu)\n
    - Link 2: [Link 2](https://data.gov.ro/dataset/firme-inregistrate-la-registrul-comertului-pana-la-data-de-07-aprilie-2023/resource/27d6a6fd-f656-477c-bb5b-5f727562205a)\n
    Please note that the information provided:\n
    - Has a general character and is not intended to address specific circumstances of any person or entity.\n
    - Is not necessarily exhaustive, accurate, or up-to-date.\n
    - Does not constitute professional or legal advice. If you need advice in a particular field, always consult a qualified person corresponding to that field.

</string>
    <string name="section3_content">In some cases, the data may contain errors that were not previously detected. Therefore, Level Stat does not assume responsibility for the quality, accuracy, and correctness of the data it makes available. Users are advised to use this data at their own risk.
</string>
    <string name="section4_content">

       The application has no governmental affiliation or governmental authorization to facilitate government services. The "Stat Level" application was developed by an independent individual and is not associated with any governmental entity or legal person. The "Stat Level" application reads data from Excel files with public data that are published on government portals.
The data about companies available through the "Stat Level" application are entirely taken from the government portal date.gov.md and date.gov.ro
The provided information:
a) Is of a general nature and is not intended to address the specific circumstances of any person or entity;
b) Is not necessarily exhaustive, accurate, or up-to-date;
c) Does not constitute professional or legal advice (if you need advice in a specific field, always consult a qualified individual).
The application does not have the status of an official application or an official or privileged relationship with a public entity. In some cases, the data may contain errors that were not previously detected. Therefore, "Stat Level" does not assume responsibility for the quality, accuracy, and correctness of the data it provides, and the user who uses this data assumes this risk.
Under no circumstances shall we be liable for any of the following losses or damages: (A) loss of data; (B) loss of anticipated revenues or profits; (C) loss of business; (D) loss of opportunities; (E) loss or damage to reputation; (F) losses suffered by third parties; or (G) any indirect, consequential damages resulting from the use of the "Stat Level" application.

</string>
    <string name="section5_content">
Aplicația nu are afiliere guvernamentală sau autorizare guvernamentală pentru a facilita servicii guvernamentale. Aplicația "Stat Level" a fost dezvoltată de către o persoană fizică independentă și nu este asociată cu nicio entitate guvernamentală sau persoană juridică. Aplicația "Stat Level" citește datele din fișierele Excel cu date publice care sunt publicate pe portalurile guvernamentale.
Datele despre companii disponibile prin aplicația "Stat Level" sunt preluate integral de pe portalul guvernamental date.gov.md și date.gov.ro.
Informațiile furnizate:
a) Au doar un caracter general și nu sunt destinate să abordeze circumstanțele specifice ale unei persoane sau entități;
b) Nu sunt neapărat exhaustive, precise sau actualizate;
c) Nu constituie consultanță profesională sau juridică (dacă aveți nevoie de consultanță într-un domeniu specific, consultați întotdeauna o persoană calificată corespunzătoare).
Aplicația nu are statut de aplicație oficială sau de relație oficială sau privilegiată cu o entitate publică. În unele cazuri, datele pot conține erori care nu au fost detectate anterior. Prin urmare, "Stat Level" nu își asumă responsabilitatea pentru calitatea, acuratețea și corectitudinea datelor pe care le pune la dispoziție, utilizatorul care utilizează aceste date asumându-și acest risc.
În niciun caz nu ne vom angaja răspunderea pentru pierderile sau daunele următoare: (A) pierderea datelor; (B) pierderea veniturilor sau profiturilor anticipate; (C) pierderea afacerii; (D) pierderea oportunităților; (E) pierderea sau daunele aduse reputației; (F) pierderile suferite de terți; sau (G) orice daune indirecte, consecințele rezultate din utilizarea aplicației "Stat Level".
</string>
    <string name="md_2019_chi_in_u_str_grenoble_106">MD Chişinău</string>
    <string name="email">Email</string>
    <string name="vitalie_bancu_bancusoft_com">vitalie.bancu@bancusoft.com</string>
    <string name="clasificatorul_produse_si_servicii_cu_caracter_industrial">Clasificatorul - Produse si servicii cu caracter industrial</string>
    <string name="scientists_editing_page">Scientists Editing Page</string>
    <string name="instruc_iune">Instrucțiune</string>
    <string name="adauga_i_angajatul_n_edittext_apoi_face_i_clic_pe_butonul_de_salvare_din_bara_de_instrumente_unele_c_mpuri_precum_numele_i_loca_i_trebuie_s_fie_completate">Adaugați angajatul în edittext, apoi faceți clic pe butonul de salvare din bara de instrumente. Unele câmpuri precum numele și locați trebuie să fie completate.</string>
    <string name="informa_ie_despre_angajat">Informație despre angajat</string>
    <string name="nume_prenume">Nume, prenume</string>
    <string name="loca_ia">Locația</string>
    <string name="telefon">Telefon</string>
    <string name="cercet_ri_statistice">Cercetări Statistice</string>
    <string name="informa_ii_personale">Informații personale</string>
    <string name="angaja_ii_bns">Angajații BNS</string>
    <string name="Full_description">Full description (en-US):</string>
    <string name="a_e_n_r_m">A.E în R.M</string>
    <string name="firme_ro">A.E în R.M</string>
    <string name="firme_romania">Firme din Romania</string>
    <string name="vizualizarea_tuturor_a_e_n_r_m">Vizualizarea tuturor A.E în R.M</string>
    <string name="vizualizarea_tuturor_f_ro">Vizualizarea tuturor firmelor din Romania</string>
    <string name="despre_accesarea_datelor_deschise_a_unita_ilor_de_drept_din_rep_moldova">despre accesarea datelor deschise a Unitaților de Drept din Rep. Moldova</string>
    <string name="clasificatorul_medicamentelor">Clasificatorul medicamentelor</string>
    <string name="ordinul_msps_rm_nr_271_din_04_07_2006_cu_privire_la_aprobarea_clasificatorului_medicamentelor_nregistrate_n_republica_moldova">Ordinul MSPS RM nr. 271 din 04.07.2006 „Cu privire la aprobarea Clasificatorului medicamentelor înregistrate în Republica Moldova</string>
    <string name="indrumar">Indrumar</string>
    <string name="despre_accesarea_datelor_deschise_si_c_tre_agen_ii_economici_implica_i_n_circula_ia_medicamentelor_din_rep_moldova">despre accesarea datelor deschise si către agenţii economici implicaţi în circulaţia medicamentelor din Rep. Moldova</string>
    <string name="Firme_inregistrate_ro">Firme înregistrate la Registrul Comerțului până la data de 07 iulie 2023 din Romana</string>
    <string name="a_e_cuatm">A.E - CUATM</string>
    <string name="a_e_caem">A.E - CAEM</string>
    <string name="cuatm">CUATM</string>
    <string name="clasificatorul_unit_ilor_administrativ_teritoriale">Clasificatorul unităţilor administrativ-teritoriale</string>
    <string name="a_e_cfp">A.E - CFP</string>
    <string name="caem2">CAEM2</string>
    <string name="caem">CAEM</string>
    <string name="cfoj">CFOJ</string>
    <string name="clasificatorul_formelor_organizatorico_juridice_ale_agen_ilor_economici_din_republica_moldova">CLASIFICATORUL FORMELOR ORGANIZATORICO-JURIDICE ALE AGENŢILOR ECONOMICI DIN REPUBLICA MOLDOVA</string>
    <string name="cfp">CFP</string>
    <string name="cl_servicii">CL SERVICII</string>
    <string name="cocm">COCM</string>
    <string name="clasificatorul_organelor_de_conducere_al_republicii_moldova_cocm">Clasificatorul Organelor de Conducere al Republicii Moldova (COCM)</string>
    <string name="todo">TODO</string>
    <string name="cl_tari">Cl Tari</string>
    <string name="clasificatorul_interna_ional_al_rilor_lumii_i_teritoriilor_care_se_utilizeaz_la_completarea_rapoartelor_statistice_privind_exportul_i_importul_de_servicii">Clasificatorul internaţional al ţărilor lumii şi teritoriilor, care se utilizează la completarea rapoartelor statistice privind exportul şi importul de servicii</string>
    <string name="about_us">About us</string>
    <string name="view_about_contatact_us">View About / Contatact us</string>
    <string name="exit">Exit</string>
    <string name="exit_of_the_from_application">Exit of the from application.</string>
    <string name="date_statistice_din_registrul_de_stat_al_unit_ilor_de_drept_dup_forma_juridic_de_organizare">Date statistice din Registrul de stat al unităţilor de drept după forma juridică de organizare</string>
    <string name="galaxy">Galaxy</string>
    <string name="e_mail">E-mail</string>
    <string name="scientist_s_name">Nume Prenume</string>
    <string name="scientists_description">Scientists Description</string>
    <string name="depart">Depart</string>
    <string name="sectia">Sectia</string>
    <string name="phone">Phone</string>
    <string name="phonemobile">Phonemobile</string>
    <string name="description">description</string>
    <string name="formneame">formneame</string>
    <string name="notice">Notice</string>
  <string name="english_language">english language</string>
    <string name="romanian_language">romanian language</string>
    <string name="russian_language">russian language</string>
    <string name="view_all">VIEW ALL</string>
    <string name="video_tutorial">Video tutorial</string>
    <string name="searcher">Searcher</string>
    <string name="despre_aplicatie">Despre aplicatie</string>
    <string name="about_application">About application</string>
    <string name="about_application_ru">О программе</string>
</resources>