<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".Views.med.help_medicament">

    <!--    <item-->

    <!--        android:id="@+id/action_search"-->
    <!--        android:orderInCategory="1"-->
    <!--        myapp:showAsAction="always"-->
    <!--        myapp:actionViewClass="android.widget.SearchView"-->
    <!--        android:title="Searcher"-->
    <!--        android:visibility="invisible"-->
    <!--        />-->

    <item
        android:id="@+id/viewAllMenuItem"
        android:title="@string/view_all"
        android:icon="@drawable/m_list"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/enlang_med"

        android:title="@string/english_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/rolang_med"

        android:title="@string/romanian_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/rulang_med"

        android:title="@string/russian_language"
        app:showAsAction="never" />

    <item
        android:id="@+id/link1_med"

        android:title="@string/video_tutorial" />



</menu>