<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:visibility="invisible"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:myapp="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.ScientistsActivitycltari">

    <item

        android:id="@+id/action_search_cl_tari"
        android:orderInCategory="1"
        myapp:showAsAction="ifRoom"
        myapp:actionViewClass="android.widget.SearchView"
        android:title="@string/searcher"
        android:visibility="invisible"
        />


    <item
        android:id="@+id/action_new_cl_tari"
        android:visibility="invisible"
        android:title="@string/despre_aplicatie"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_new_en_cl_tari"
        android:visibility="invisible"
        android:title="@string/about_application"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_new_ru_cl_tari"
        android:visibility="invisible"
        android:title="@string/about_application_ru"
        app:showAsAction="never" />

    <item
        android:id="@+id/video2_cl_tari"
        android:visibility="invisible"
        android:title="@string/video_tutorial"
        app:showAsAction="never" />

</menu>