<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Views.DetailActivitycuatm">

    <item
        android:visibility="invisible"
        android:id="@+id/action_edit_cuatm"
        android:title="@string/despre_aplicatie"
        app:showAsAction="never" />

    <item
        android:visibility="invisible"
        android:id="@+id/action_edit_en_cuatm"
        android:title="@string/about_application"
        app:showAsAction="never" />


    <item
        android:visibility="invisible"
        android:id="@+id/action_edit_ru_cuatm"
        android:title="@string/about_application_ru"
        app:showAsAction="never" />


    <item
        android:id="@+id/video3_cuatm"
        android:visibility="invisible"
        android:title="@string/video_tutorial"
        app:showAsAction="never" />



    <!--    <item-->
    <!--        android:visibility="invisible"-->
    <!--        android:id="@+id/action_edit1"-->
    <!--        android:title="Aplicația  dezvoltată de DTI al BNS"-->
    <!--        app:showAsAction="never" />-->
</menu>