<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Views.DetailActivityclcocm">

    <item
        android:visibility="invisible"
        android:id="@+id/action_edit_cl_cocm"
        android:title="@string/despre_aplicatie"
        app:showAsAction="never" />

    <item
        android:visibility="invisible"
        android:id="@+id/action_edit_en_cl_cocm"
        android:title="@string/about_application"
        app:showAsAction="never" />


    <item
        android:visibility="invisible"
        android:id="@+id/action_edit_ru_cl_cocm"
        android:title="@string/about_application_ru"
        app:showAsAction="never" />


    <item
        android:id="@+id/video3_cl_cocm"
        android:visibility="invisible"
        android:title="@string/video_tutorial"
        app:showAsAction="never" />



    <!--    <item-->
    <!--        android:visibility="invisible"-->
    <!--        android:id="@+id/action_edit1"-->
    <!--        android:title="Aplicația  dezvoltată de DTI al BNS"-->
    <!--        app:showAsAction="never" />-->
</menu>